--- a/respub-centos55/Vagrantfile
+++ b/respub-centos55/Vagrantfile
@@ -1,8 +1,10 @@
 Vagrant::Config.run do |config|
 
-  config.vm.box = "centos6"
-  config.vm.box_url= "https://dl.dropbox.com/u/7225008/Vagrant/CentOS-6.3-x86_64-minimal.box"
+  config.vm.box = "centos55"
+  # config.vm.box_url= ""
   # config.vm.boot_mode = :gui
+
+  config.vbguest.auto_update = false
 
   # config.vm.network :hostonly, "192.168.33.10"
   # config.vm.network :bridged
@@ -10,7 +12,11 @@ Vagrant::Config.run do |config|
 
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
 
-  config.vm.provision :puppet, :facter => { "ec2_instance_id" => "i-000000" }, :options => ["--debug"] do |puppet|
+  config.vm.provision :puppet,
+    :facter => {
+      "stage" => "PROD",
+      "role" => "respub"
+     }, :options => ["--debug"] do |puppet|
     puppet.manifests_path = "."
     puppet.manifest_file  = "site.pp"
     puppet.module_path    = "modules"
