--- a/enterprise-monitoring/Vagrantfile
+++ b/enterprise-monitoring/Vagrantfile
@@ -5,12 +5,12 @@ Vagrant::Config.run do |config|
   # config.vbguest.auto_update = true
 
   # config.vm.network :hostonly, "192.168.33.10"
-  # config.vm.network :bridged
-  # config.vm.forward_port 8649, 8650 
+  config.vm.network :bridged
+  # config.vm.forward_port 80, 8080
 
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
 
-  config.vm.provision :puppet, :facter => { }, :options => ["--debug"] do |puppet|
+  config.vm.provision :puppet, :facter => { }, :options => ["--debug","--no-report"] do |puppet|
     puppet.manifests_path = "."
     puppet.manifest_file  = "site.pp"
     puppet.module_path    = "modules"
