--- a/enterprise-monitoring/Vagrantfile
+++ b/enterprise-monitoring/Vagrantfile
@@ -10,7 +10,20 @@ Vagrant::Config.run do |config|
 
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
 
-  config.vm.provision :puppet, :facter => { }, :options => ["--debug","--no-report"] do |puppet|
+  config.vm.provision :puppet,
+    :facter => {
+      "role"                            => "frontend-front",
+      "int_service_domain"              => "gudev.gnl",
+      # "ec2_instance_id"                 => "i-000000",
+      # "ec2_public_ipv4"                 => "10.1.1.1",
+      # "ec2_placement_availability_zone" => "eu-west-1a"
+    },
+    :options => [
+      # "--debug",
+      # "--verbose",
+      "--no-report",
+      "--pluginsync",
+    ] do |puppet|
     puppet.manifests_path = "."
     puppet.manifest_file  = "site.pp"
     puppet.module_path    = "modules"
