--- a/frontend-centos6/Vagrantfile
+++ b/frontend-centos6/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant::Config.run do |config|
       "role"                            => "frontend-front",
       "int_service_domain"              => "gudev.gnl",
       "ec2_instance_id"                 => "i-000000",
-      "ec2_public_ipv4"                 => "10.1.1.1",
+      "ec2_local_ipv4"                  => "10.1.1.1",
       "ec2_placement_availability_zone" => "eu-west-1a"
     },
     :options => [ 
