--- a/debian-build/Vagrantfile
+++ b/debian-build/Vagrantfile
@@ -4,8 +4,9 @@ Vagrant::Config.run do |config|
   # config.vm.boot_mode = :gui
   # config.vbguest.auto_update = true
 
-  # config.vm.network :hostonly, "192.168.33.10"
-  config.vm.network :bridged
+  config.vm.network :hostonly, "192.168.33.12"
+  config.vm.network :bridged, :bridge => 'en1: Wi-Fi (AirPort)'
+
   # config.vm.forward_port 80, 8080
 
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
