--- a/ubuntu-precise/Vagrantfile
+++ b/ubuntu-precise/Vagrantfile
@@ -13,10 +13,10 @@ Vagrant::Config.run do |config|
 
   # config.vm.share_folder "v-data", "/vagrant_data", "../data"
 
-  config.vm.provision :puppet, :options => ["--debug"] do |puppet|
-    puppet.manifests_path = "."
-    puppet.manifest_file  = "site.pp"
-    puppet.module_path    = "modules"
-  end
+  # config.vm.provision :puppet, :options => ["--debug"] do |puppet|
+  #   puppet.manifests_path = "."
+  #   puppet.manifest_file  = "site.pp"
+  #   puppet.module_path    = "modules"
+  # end
 
 end
