--- a/ganglia-dev/Vagrantfile
+++ b/ganglia-dev/Vagrantfile
@@ -1,19 +1,30 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
-
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "raring64"  # 13.04
-  config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
 
-  # config.vm.network :private_network, ip: "192.168.33.10"
-  config.vm.network :private_network, ip: "192.168.0.105"
+  config.vm.provider :virtualbox do |vb|
+    vb.customize ["modifyvm", :id, "--memory", "1024"]
+  end
 
-  # config.vm.provider :virtualbox do |vb|
-  #   vb.gui = true
-  #   vb.customize ["modifyvm", :id, "--memory", "1024"]
+  config.vm.define "raring", primary: true do |raring|
+    raring.vm.box = "raring64"  # 13.04
+    raring.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
+    raring.vm.network :private_network, ip: "192.168.0.105"
+    raring.vm.provision :shell, :path => "scripts/ubuntu.sh"
+  end
 
-  config.vm.provision :shell, :path => "setup.sh"
+  config.vm.define "wheezy" do |wheezy|
+    wheezy.vm.box = "wheezy64"  # debian 7.0
+    wheezy.vm.box_url = "https://dl.dropboxusercontent.com/s/xymcvez85i29lym/vagrant-debian-wheezy64.box"
+    wheezy.vm.network :private_network, ip: "192.168.0.106"
+    wheezy.vm.provision :shell, :path => "scripts/debian.sh"
+  end
 
-  # end
+  config.vm.define "centos6" do |centos6|
+    centos6.vm.box = "centos6"
+    centos6.vm.network :private_network, ip: "192.168.0.107"
+    centos6.vm.provision :shell, :path => "scripts/centos.sh"
+  end
+
 end
