--- a/ganglia-dev/Vagrantfile
+++ b/ganglia-dev/Vagrantfile
@@ -2,7 +2,6 @@
 # vi: set ft=ruby :
 Vagrant.configure("2") do |config|
 
-
   config.vm.provider :virtualbox do |vb|
     vb.customize ["modifyvm", :id, "--memory", "1024"]
   end
@@ -23,6 +22,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "centos6" do |centos6|
     centos6.vm.box = "centos6"
+    centos6.vm.box_url = "http://puppet-vagrant-boxes.puppetlabs.com/centos-64-x64-vbox4210-nocm.box"
     centos6.vm.network :private_network, ip: "192.168.0.107"
     centos6.vm.provision :shell, :path => "scripts/centos.sh"
   end
