--- a/ganglia-dev/Vagrantfile
+++ b/ganglia-dev/Vagrantfile
@@ -9,22 +9,32 @@ Vagrant.configure("2") do |config|
   config.vm.define "raring", primary: true do |raring|
     raring.vm.box = "raring64"  # 13.04
     raring.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
-    raring.vm.network :private_network, ip: "192.168.0.105"
+    raring.vm.network :private_network, ip: "192.168.0.110"
     raring.vm.provision :shell, :path => "scripts/ubuntu.sh"
   end
 
   config.vm.define "wheezy" do |wheezy|
     wheezy.vm.box = "wheezy64"  # debian 7.0
     wheezy.vm.box_url = "https://dl.dropboxusercontent.com/s/xymcvez85i29lym/vagrant-debian-wheezy64.box"
-    wheezy.vm.network :private_network, ip: "192.168.0.106"
+    wheezy.vm.network :private_network, ip: "192.168.0.111"
     wheezy.vm.provision :shell, :path => "scripts/debian.sh"
   end
 
   config.vm.define "centos6" do |centos6|
     centos6.vm.box = "centos6"
     centos6.vm.box_url = "http://puppet-vagrant-boxes.puppetlabs.com/centos-64-x64-vbox4210-nocm.box"
-    centos6.vm.network :private_network, ip: "192.168.0.107"
+    centos6.vm.network :private_network, ip: "192.168.0.112"
     centos6.vm.provision :shell, :path => "scripts/centos.sh"
+  end
+
+  config.vm.define "oracle" do |oel65|
+    oel65.vm.box = "oel65"
+    oel65.vm.box_url = "https://dl.dropbox.com/s/613uhl43ekqzami/oraclelinux-6-x86_64.box"
+    oel65.vm.network :private_network, ip: "192.168.0.113"
+    oel65.vm.provision :shell, :path => "scripts/centos.sh"
+    oel65.vm.provider :virtualbox do |vb|
+      vb.customize ["modifyvm", :id, "--usbehci", "off"]
+    end
   end
 
 end
