--- a/ganglia-dev/Vagrantfile
+++ b/ganglia-dev/Vagrantfile
@@ -27,10 +27,17 @@ Vagrant.configure("2") do |config|
     centos6.vm.provision :shell, :path => "scripts/centos.sh"
   end
 
+  config.vm.define "centos7" do |centos7|
+    centos7.vm.box = "centos7"
+    centos7.vm.box_url = "https://f0fff3908f081cb6461b407be80daf97f07ac418.googledrive.com/host/0BwtuV7VyVTSkUG1PM3pCeDJ4dVE/centos7.box"
+    centos7.vm.network :private_network, ip: "192.168.0.113"
+    centos7.vm.provision :shell, :path => "scripts/centos.sh"
+  end
+
   config.vm.define "oracle" do |oel65|
     oel65.vm.box = "oel65"
     oel65.vm.box_url = "https://dl.dropbox.com/s/613uhl43ekqzami/oraclelinux-6-x86_64.box"
-    oel65.vm.network :private_network, ip: "192.168.0.113"
+    oel65.vm.network :private_network, ip: "192.168.0.114"
     oel65.vm.provision :shell, :path => "scripts/centos.sh"
     oel65.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--usbehci", "off"]
