--- a/ganglia-dev/Vagrantfile
+++ b/ganglia-dev/Vagrantfile
@@ -6,11 +6,11 @@ Vagrant.configure("2") do |config|
     vb.customize ["modifyvm", :id, "--memory", "1024"]
   end
 
-  config.vm.define "raring", primary: true do |raring|
-    raring.vm.box = "raring64"  # 13.04
-    raring.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/raring/current/raring-server-cloudimg-amd64-vagrant-disk1.box"
-    raring.vm.network :private_network, ip: "192.168.0.110"
-    raring.vm.provision :shell, :path => "scripts/ubuntu.sh"
+  config.vm.define "trusty", primary: true do |trusty|
+    trusty.vm.box = "trusty64"  # 14.04 LTS
+    trusty.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/trusty/current/trusty-server-cloudimg-amd64-vagrant-disk1.box"
+    trusty.vm.network :private_network, ip: "192.168.0.110"
+    trusty.vm.provision :shell, :path => "scripts/ubuntu.sh"
   end
 
   config.vm.define "wheezy" do |wheezy|
